Fix Close menu item in shelf for v1 apps

v1 packaged apps do not respond to the "Close" option in their shelf
(task bar) item's context menu.

Bug: 775416
Change-Id: I3e26a1cf5bf5f24d86d9e35379ce21ec677bc68a