chrome/browser/ui/ash/launcher/chrome_launcher_controller.cc
@@ -583,9 +583,12 @@ std::vector<content::WebContents*>
 ChromeLauncherController::GetV1ApplicationsFromAppId(
     const std::string& app_id) {
   const ash::ShelfItem* item = GetItem(ash::ShelfID(app_id));
-  // If there is no such item pinned to the launcher, no menu gets created.
-  if (!item || item->type != ash::TYPE_PINNED_APP)
+  // If there is no such item in the launcher, it shouldn't have associated
+  // applications.
+  if (!item ||
+      (item->type != ash::TYPE_APP && item->type != ash::TYPE_PINNED_APP)) {
     return std::vector<content::WebContents*>();
+  }
   ash::ShelfItemDelegate* delegate = model_->GetShelfItemDelegate(item->id);
   AppShortcutLauncherItemController* item_controller =
       static_cast<AppShortcutLauncherItemController*>(delegate);
